# orbitalC2

./: .gitignore  README.md  docs.md
api/: .env  Dockerfile  docker-compose.yaml  gen_admin.sh  go.mod  go.sum  main.go  run.sh
api/controllers/: default.go  jwt.go
api/db/: db.go
api/docs/: docs.go  swagger.yaml
api/routers/: router.go
api/routes/: routes.go
orbital_agent/: Cargo.toml
orbital_agent/src/: main.rs
sshapp/: .env  go.mod  go.sum  main.go
sshapp/form/: form.go
sshapp/models/forms/: form.go
sshapp/models/help/: help.go
tui/: demo.tape  go.mod  go.sum  main.go
tui/models/forms/: form.go
tui/models/help/: help.go
tui/models/notes/: notes.go
tui/models/table/: table.go
tui/req/: req.go
tui/styles/: styles.go
