[package]
name = "orbital_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
